--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -415,7 +415,7 @@
               </a>
             {%- when 'share' -%}
               {% assign share_url = product.selected_variant.url | default: product.url | prepend: request.origin %}
-              {% render 'share-button',
+              {% render 'share-item-buttons',
                 block: block,
                 share_link: share_url
               %}
