added social sharing icons to product page template

--- a/snippets/share-item-buttons.liquid
+++ b/snippets/share-item-buttons.liquid
@@ -46,7 +46,7 @@
                 onclick="this.select();"
                 readonly
               >
-              <label class="field__label" for="ShareUrl-{{ section.id }}">{{ 'general.share.share_url' | t }}</label>
+              <label class="share-button__label field__label" for="ShareUrl-{{ section.id }}">{{ 'general.share.share_url' | t }}</label>
             </div>
             <button class="share-button__close hidden no-js-hidden">
               {% render 'icon-close' %}
