--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -405,6 +405,10 @@
       <script src="{{ 'predictive-search.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
 
+    <script>
+      !function(s,a,e,v,n,t,z){if(s.saq)return;n=s.saq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!s._saq)s._saq=n; n.push=n;n.loaded=!0;n.version='1.0';n.queue=[];t=a.createElement(e);t.async=!0;t.src=v;z=a.getElementsByTagName(e)[0];z.parentNode.insertBefore(t,z)}(window,document,'script','https://tags.srv.stackadapt.com/events.js');saq('ts', 'UPDFqSY5nTYIXySWFdfi2A');
+    </script>
+
     <script src="//code.jivosite.com/widget.js" data-jv-id="8LEByLkLYT" async></script>
     <script async type="text/javascript" src="//static.klaviyo.com/onsite/js/klaviyo.js?company_id=LxJrGw"></script>
 
