Update preset name in multirow-social-impact section

--- a/sections/multirow-social-impact.liquid
+++ b/sections/multirow-social-impact.liquid
@@ -383,7 +383,7 @@
   ],
   "presets": [
     {
-      "name": "t:sections.multirow.presets.name",
+      "name": "Multirow - Social Impact",
       "blocks": [
         {
           "type": "row"
