--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -288,12 +288,25 @@ slider-component.slider-component-full-width {
 }
 
 .slider-counter__link--dots .dot {
-  width: 1rem;
-  height: 1rem;
+  --slider-dot-size: 1rem;
+  width: var(--slider-dot-size);
+  height: var(--slider-dot-size);
   border-radius: 50%;
   border: 0.1rem solid rgba(var(--color-slider-controls), 0.5);
   padding: 0;
   display: block;
+}
+
+@media screen and (min-width: 750px) {
+  .slider-counter__link--dots .dot {
+    --slider-dot-size: 1.4rem;
+  }
+}
+
+@media screen and (min-width: 990px) {
+  .slider-counter__link--dots .dot {
+    --slider-dot-size: 1.8rem;
+  }
 }
 
 .slider-counter__link--active.slider-counter__link--dots .dot {
