Update social media links in multirow-social-impact section

--- a/sections/multirow-social-impact.liquid
+++ b/sections/multirow-social-impact.liquid
@@ -408,27 +408,27 @@
         {
           "type": "url",
           "id": "facebook_link",
-          "label": "Facebook Link",
+          "label": "Facebook Link"
         },
         {
           "type": "url",
           "id": "twitter_link",
-          "label": "Twitter Link",
+          "label": "Twitter Link"
         },
         {
           "type": "url",
           "id": "instagram_link",
-          "label": "Instagram Link",
+          "label": "Instagram Link"
         },
         {
           "type": "url",
           "id": "youtube_link",
-          "label": "Youtube Link",
+          "label": "Youtube Link"
         },
         {
           "type": "url",
           "id": "tiktok_link",
-          "label": "TikTok Link",
+          "label": "TikTok Link"
         }
       ]
     }
@@ -439,7 +439,7 @@
       "blocks": [
         {
           "type": "row"
-        },
+        }
       ]
     }
   ]
