Update cause_color field type and label

--- a/sections/multirow-social-impact.liquid
+++ b/sections/multirow-social-impact.liquid
@@ -397,47 +397,10 @@
           "label": "t:sections.multirow.blocks.row.settings.image.label"
         },
         {
-          "type": "select",
+          "type": "color",
           "id": "cause_color",
-          "label": "Cause Device Color",
-          "options": [
-            {
-              "value": "#000000",
-              "label": "Black"
-            },
-            {
-              "value": "#FFFFFF",
-              "label": "White"
-            },
-            {
-              "value": "#FF0000",
-              "label": "Red"
-            },
-            {
-              "value": "#00FF00",
-              "label": "Forest Green"
-            },
-            {
-              "value": "#0bf72a",
-              "label": "Lime Green"
-            },
-            {
-              "value": "#0b82f7",
-              "label": "Ocean Blue"
-            },
-            {
-              "value": "#f7e70b",
-              "label": "Yellow"
-            },
-            {
-              "value": "#d40bf7",
-              "label": "Cosmic Pink"
-            },
-            {
-              "value": "#0bf7b7",
-              "label": "Rainbow"
-            }
-          ]
+          "label": "Cause Color",
+          "default": "#000000"
         },
         {
           "type": "text",
