Update social media links in multirow-social-impact section

--- a/sections/multirow-social-impact.liquid
+++ b/sections/multirow-social-impact.liquid
@@ -130,27 +130,27 @@
               <div class="social-impact-links">
                 {%- if block.settings.facebook_link -%}
                   <a href="{{ block.settings.facebook_link }}" class="social-impact-link-button social-facebook">
-                    {%- render 'icon-facebook' -%}
+                    {% render 'icon-facebook' %}
                   </a>
                 {%- endif -%}
                 {%- if block.settings.twitter_link -%}
                   <a href="{{ block.settings.twitter_link }}" class="social-impact-link-button social-twitter">
-                    {%- render 'icon-twitter' -%}
+                    {% render 'icon-twitter' %}
                   </a>
                 {%- endif -%}
                 {%- if block.settings.instagram_link -%}
                   <a href="{{ block.settings.instagram_link }}" class="social-impact-link-button social-instagram">
-                    {%- render 'icon-instagram' -%}
+                    {% render 'icon-instagram' %}
                   </a>
                 {%- endif -%}
                 {%- if block.settings.youtube_link -%}
                   <a href="{{ block.settings.youtube_link }}" class="social-impact-link-button social-youtube">
-                    {%- render 'icon-youtube' -%}
+                    {% render 'icon-youtube' %}
                   </a>
                 {%- endif -%}
                 {%- if block.settings.tiktok_link -%}
                   <a href="{{ block.settings.tiktok_link }}" class="social-impact-link-button social-tiktok">
-                    {%- render 'icon-tiktok' -%}
+                    {% render 'icon-tiktok' %}
                   </a>
                 {%- endif -%}
               </div>
