Update button label and link in multirow-social-impact section

--- a/sections/multirow-social-impact.liquid
+++ b/sections/multirow-social-impact.liquid
@@ -431,13 +431,13 @@
         {
           "type": "text",
           "id": "button_label",
-          "default": "Website Link",
-          "label": "t:sections.multirow.blocks.row.settings.button_label.label"
+          "default": "Get Involved",
+          "label": "Website"
         },
         {
           "type": "url",
           "id": "button_link",
-          "label": "t:sections.multirow.blocks.row.settings.button_link.label"
+          "label": "Website Link"
         },
         {
           "type": "url",
