--- a/sections/multirow-social-impact.liquid
+++ b/sections/multirow-social-impact.liquid
@@ -24,6 +24,10 @@
     place-items: center;
     padding: 1rem;
   }
+  .social-impact-links > a > svg {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
   .social-impact-color-swatch {
     width: 1rem;
     height: 1rem;
