Update social impact links icon size

--- a/sections/multirow-social-impact.liquid
+++ b/sections/multirow-social-impact.liquid
@@ -25,8 +25,9 @@
     padding: 1rem;
   }
   .social-impact-links > a > svg {
-    width: 1.5rem;
-    height: 1.5rem;
+    --social-icon-size: var(--text-body-size); 
+    width: var(--social-icon-size);
+    height: var(--social-icon-size);
   }
   .social-impact-color-swatch {
     width: 1rem;
