Update social icon size using CSS clamp

--- a/sections/multirow-social-impact.liquid
+++ b/sections/multirow-social-impact.liquid
@@ -25,7 +25,7 @@
     padding: 1rem;
   }
   .social-impact-links > a > svg {
-    --social-icon-size: var(--text-body-size); 
+    --social-icon-size: clamp(1.5rem, 2.5vw, 2.5rem); 
     width: var(--social-icon-size);
     height: var(--social-icon-size);
   }
