Add hover effect to social media links

--- a/sections/multirow-social-impact.liquid
+++ b/sections/multirow-social-impact.liquid
@@ -34,6 +34,10 @@
     display: grid;
     place-items: center;
     padding: 1rem;
+    transition: opacity 0.3s ease;
+  }
+  .social-impact-links__social-media > a:hover {
+    opacity: 0.8;
   }
   .social-impact-links__social-media > a > svg {
     --social-icon-size: clamp(1.5rem, 2.5vw, 2.5rem);
