Fix hover effect in social-impact-links__social-media

--- a/sections/multirow-social-impact.liquid
+++ b/sections/multirow-social-impact.liquid
@@ -36,7 +36,7 @@
     padding: 1rem;
     transition: opacity 0.3s ease;
   }
-  .social-impact-links__social-media > a:hover {
+  .social-impact-links__social-media:hover > a {
     opacity: 0.8;
   }
   .social-impact-links__social-media > a > svg {
