--- a/sections/multirow-social-impact.liquid
+++ b/sections/multirow-social-impact.liquid
@@ -34,9 +34,10 @@
     display: grid;
     place-items: center;
     padding: 1rem;
+    opacity: 1;
     transition: opacity 0.3s ease;
   }
-  .social-impact-links__social-media:hover > a {
+  .social-impact-links__social-media > a:hover {
     opacity: 0.8;
   }
   .social-impact-links__social-media > a > svg {
