--- a/sections/multirow-social-impact.liquid
+++ b/sections/multirow-social-impact.liquid
@@ -46,18 +46,17 @@
     height: var(--social-icon-size);
   }
   .social-impact-color-swatch {
-    width: 1rem;
-    height: 1rem;
+    --color-swatch-size: 1rem;
+    width: var(--color-swatch-size);
+    height: var(--color-swatch-size);
     border-radius: 50%;
     display: inline-block;
-    margin-right: 1rem;
+    margin-right: var(--color-swatch-size);
     background-color: var(--color-swatch-value);
   }
   @media screen and (min-width: 750px) {
     .social-impact-color-swatch {
-      width: 1.5rem;
-      height: 1.5rem;
-      margin-right: 1.5rem;
+      --color-swatch-size: 1.25rem;
     }
   
   }
@@ -123,11 +122,6 @@
           </div>
           <div class="image-with-text__text-item grid__item">
             <div class="image-with-text__content image-with-text__content--{{ section.settings.desktop_content_position }} image-with-text__content--desktop-{{ section.settings.desktop_content_alignment }} image-with-text__content--mobile-{{ section.settings.mobile_content_alignment }} image-with-text__content--{{ section.settings.image_height }} content-container{% unless no_content_background and no_content_styles %} gradient color-{{ section.settings.row_color_scheme }}{% endunless %}">
-              {%- if block.settings.cause_color -%}
-                <div class="image-with-text__text image-with-text__text--caption" style="--color-swatch-value: {{ block.settings.cause_color }}" style="display: flex; align-items: center">
-                  All <span class="social-impact-color-swatch" style="--color-swatch-value: {{ block.settings.cause_color }}"></span> color devices benefit this cause:
-                </div>
-              {%- endif -%}
               {%- if block.settings.caption -%}
                 <p class="image-with-text__text image-with-text__text--caption caption-with-letter-spacing caption-with-letter-spacing--medium">
                   {{ block.settings.caption | escape }}
@@ -137,6 +131,11 @@
                 <h2 class="image-with-text__heading {{ section.settings.heading_size }} rte">
                   {{ block.settings.heading }}
                 </h2>
+              {%- endif -%}
+              {%- if block.settings.cause_color -%}
+                <div class="image-with-text__text image-with-text__text--caption" style="--color-swatch-value: {{ block.settings.cause_color }}" style="display: flex; align-items: center">
+                  <span class="social-impact-color-swatch" style="--color-swatch-value: {{ block.settings.cause_color }}"></span> devices benefit this cause:
+                </div>
               {%- endif -%}
               {%- if block.settings.text -%}
                 <div class="image-with-text__text rte {{ section.settings.text_style }}">{{ block.settings.text }}</div>
